crates/reinhardt-pages/tests/ui/server_fnset/fail/action_rest_key.stderr
error: REST-only action options are not supported by server function sets
 --> tests/ui/server_fnset/fail/action_rest_key.rs:9:26
  |
9 |     #[action(detail = true, methods = ["POST"])]
  |                             ^^^^^^^

error[E0277]: the trait bound `Actions: ServerFnSetActions<ArticleResource>` is not satisfied
 --> tests/ui/server_fnset/fail/action_rest_key.rs:4:44
  |
4 | #[server_fnset(name = "article", actions = Actions)]
  |                                            ^^^^^^^ unsatisfied trait bound
  |
help: the trait `ServerFnSetActions<ArticleResource>` is not implemented for `Actions`
 --> tests/ui/server_fnset/fail/action_rest_key.rs:3:1
  |
3 | struct Actions;
  | ^^^^^^^^^^^^^^

error[E0277]: the trait bound `Actions: ServerFnSetActions<ArticleResource>` is not satisfied
 --> tests/ui/server_fnset/fail/action_rest_key.rs:4:1
  |
4 | #[server_fnset(name = "article", actions = Actions)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `ServerFnSetActions<ArticleResource>` is not implemented for `Actions`
 --> tests/ui/server_fnset/fail/action_rest_key.rs:3:1
  |
3 | struct Actions;
  | ^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `server_fnset` (in Nightly builds, run with -Z macro-backtrace for more info)
